EmailActivity integrated with ExportActivity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,18 +9,20 @@
 
     <ImageButton
         android:id="@+id/scanButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="129dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="55dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
+        android:background="@drawable/scan3"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/scanText"
         app:layout_constraintEnd_toStartOf="@+id/manageButton"
         app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3"
-        app:srcCompat="@drawable/scanner" />
+        app:srcCompat="@drawable/scan3" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -66,7 +68,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/scanButton"
         app:layout_constraintTop_toBottomOf="@+id/imageView3"
-        app:srcCompat="@drawable/manage"/>
+        app:srcCompat="@drawable/Manage1copy"/>
 
     <TextView
         android:id="@+id/manageText"
