--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,17 +9,19 @@
 
     <ImageButton
         android:id="@+id/scanButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="125dp"
+        android:layout_height="125dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="55dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/scanText"
         app:layout_constraintEnd_toStartOf="@+id/manageButton"
         app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo"
+        android:background="@android:color/transparent"
         app:srcCompat="@drawable/scanner" />
 
     <ImageView
@@ -32,7 +34,6 @@
         app:layout_constraintHorizontal_bias="0.538"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.261"
         app:srcCompat="@drawable/logo" />
 
 
@@ -41,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="36dp"
         android:layout_marginBottom="32dp"
-        android:text="Scan Barcode"
+        android:text="Scanner"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="24sp"
@@ -53,17 +54,19 @@
 
     <ImageButton
         android:id="@+id/manageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="125dp"
+        android:layout_height="125dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="55dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
+        android:background="@android:color/transparent"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/manageText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/scanButton"
         app:layout_constraintTop_toBottomOf="@+id/logo"
-        app:srcCompat="@drawable/manage"/>
+        app:srcCompat="@drawable/manage" />
 
     <TextView
         android:id="@+id/manageText"
@@ -82,12 +85,14 @@
 
     <ImageButton
         android:id="@+id/importButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="125dp"
+        android:layout_height="125dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
+        android:background="@android:color/transparent"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/importText"
         app:layout_constraintEnd_toStartOf="@+id/exportButton"
         app:layout_constraintStart_toStartOf="parent"
@@ -96,12 +101,14 @@
 
     <ImageButton
         android:id="@+id/exportButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="125dp"
+        android:layout_height="125dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="16dp"
+        android:background="@android:color/transparent"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/exportText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/importButton"
