--- a/app/src/main/res/layout/activity_export.xml
+++ b/app/src/main/res/layout/activity_export.xml
@@ -4,50 +4,71 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/back"
     tools:context=".ExportActivity">
 
     <Button
         android:id="@+id/emailButton"
-        android:layout_width="220dp"
-        android:layout_height="80dp"
+
+        android:layout_width="242dp"
+        android:layout_height="79dp"
         android:layout_marginStart="8dp"
+
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="236dp"
-        android:text="EMAIL"
+        android:background="@drawable/buttonshape"
+
+        android:shadowColor="#A8A8A8"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
+        android:text="Email"
         android:textAlignment="center"
-        android:textSize="24sp"
+        android:textColor="#000000"
+
+
+        android:textSize="30sp"
         android:textStyle="bold"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="408dp"
-        android:layout_height="156dp"
+        android:layout_width="390dp"
+        android:layout_height="127dp"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="4dp"
         android:layout_marginBottom="8dp"
-        android:scaleType="fitEnd"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toTopOf="@+id/scanButton"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.261"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/stanlee" />
 
     <Button
         android:id="@+id/exButton"
-        android:layout_width="220dp"
-        android:layout_height="80dp"
+        android:layout_width="242dp"
+        android:layout_height="75dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+
         android:layout_marginBottom="8dp"
-        android:text="Convert to CSV FILE"
+        android:background="@drawable/buttonshape"
+
+        android:shadowColor="#A8A8A8"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
+        android:text="Convert 2 CSV"
         android:textAlignment="center"
-        android:textSize="24sp"
+        android:textColor="#000000"
+
+
+        android:textSize="30sp"
         android:textStyle="bold"
         android:visibility="visible"
 
@@ -58,4 +79,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.765" />
 
+
+
 </android.support.constraint.ConstraintLayout>
+
