--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="yellow">#FFD20D</color>
     <color name="black">#000000</color>
+    <color name="blue">#4169E1</color>
+    <color name="orangeRed">#FF4500</color>
 </resources>
