--- a/app/src/main/res/layout/activity_scanlist.xml
+++ b/app/src/main/res/layout/activity_scanlist.xml
@@ -31,6 +31,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="@android:color/transparent"
+        android:contentDescription="@string/addrecordbtn"
         android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
