--- a/app/src/main/res/layout/activity_barcode.xml
+++ b/app/src/main/res/layout/activity_barcode.xml
@@ -6,6 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".BarcodeActivity"
-    android:background="@drawable/background">
+    android:background="@color/black">
 
 </android.support.constraint.ConstraintLayout>
