--- a/app/src/main/res/layout/activity_scanlist.xml
+++ b/app/src/main/res/layout/activity_scanlist.xml
@@ -39,7 +39,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scroll"
         app:layout_constraintVertical_bias="0.987"
-        app:srcCompat="@drawable/add" />
+        app:srcCompat="@android:drawable/ic_menu_add" />
 
 
 </android.support.constraint.ConstraintLayout>
