Small visual tweaks

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -140,7 +140,8 @@
             android:fontFamily="@font/adamina"
             android:gravity="top"
             android:maxLines="2"
-            android:text="Warehouse \nInventory"
+            android:padding="5dp"
+            android:text="Warehouse Inventory\u0020"
             android:textColor="@color/black"
             android:textSize="30sp"
             android:textStyle="bold|italic"
@@ -148,19 +149,5 @@
             tools:layout_editor_absoluteX="16dp"
             tools:layout_editor_absoluteY="27dp" />
 
-        <ImageButton
-            android:id="@+id/settingsButton"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center|right"
-            android:contentDescription="settings"
-            android:padding="5dp"
-            android:scaleType="fitXY"
-            android:background="@android:color/transparent"
-            android:src="@drawable/settings"
-            tools:layout_editor_absoluteX="197dp"
-            tools:layout_editor_absoluteY="25dp" />
-
     </android.support.v7.widget.Toolbar>
-
 </android.support.constraint.ConstraintLayout>
